--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -9,9 +9,7 @@
         <div class="content-container" id="mission-content">
             <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
             <p class="section-text" id="mission-text">
-                Our mission is to cultivate the purest breed of Maine Coon
-                cats. A cat that exhibits the primal and feral nature of
-                the wild.
+                Primal Bloodline is dedicated to ethical breeding, prioritizing health, genetics, and early socialization to raise confident, loving companions.
             </p>
         </div>
     </div>
