--- a/web/css/main-nav.css
+++ b/web/css/main-nav.css
@@ -31,11 +31,21 @@
 }
 
 #top-navbar.middle {
+    background-color: rgb(45, 45, 45, 0.7);
+    color: white;
+    backdrop-filter: blur(10px);
+}
+
+#top-navbar.middle .site-title {
+    fill: white;
+}
+
+#top-navbar.middle-bottom {
     background-color: rgb(255, 255, 255);
     color: black;
 }
 
-#top-navbar.middle .site-title {
+#top-navbar.middle-bottom .site-title {
     fill: black;
 }
 
