--- a/web/css/main-nav.css
+++ b/web/css/main-nav.css
@@ -68,11 +68,36 @@
     margin-top: 0.75rem;
 }
 
-#right-nav-links {
-    margin-right: 5rem;
-    font-size: 18px;
+.right-nav-links {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 25vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(21, 21, 21);
+    transform: translateX(100%);
+    transition: transform 0.3s ease;
 }
 
-.right-nav-link {
-    padding-left: 2rem;
+.right-nav-links.open {
+    transform: translateX(0);
+}
+
+.burger-menu {
+    margin-right: 5rem;
+    cursor: pointer;
+}
+
+.burger-line {
+    width: 2.5rem;
+    height: 0.2rem;
+    background-color: white;
+    margin-bottom: 0.5rem;
+}
+
+.burger-line.middle-bottom {
+    background-color: black;
 }
