--- a/web/css/main-nav.css
+++ b/web/css/main-nav.css
@@ -73,13 +73,37 @@
     top: 0;
     right: 0;
     height: 100vh;
-    width: 25vw;
+    width: 15vw;
     display: flex;
+    padding-top: 3rem;
     flex-direction: column;
     align-items: center;
     background-color: rgb(21, 21, 21);
     transform: translateX(100%);
     transition: transform 0.3s ease;
+}
+
+.close-nav-button {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    background: transparent;
+    border: none;
+    font-size: 1.25rem;
+    color: white;
+    cursor: pointer;
+}
+
+.nav-link {
+    font-size: 1.25rem;
+    padding-bottom: 1rem;
+    color: white;
+}
+
+.nav-link:hover,
+.nav-link:focus {
+    opacity: 0.9;
+    color: white; /* stays white */
 }
 
 .right-nav-links.open {
