--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="/web/css/index.css">
     <link rel="stylesheet" href="/web/css/kittens.css">
     <link rel="stylesheet" href="/web/css/cat-details.css">
-    <link rel="stylesheet" href="/web/css/alternate-nav.css">
-    <link rel="stylesheet" href="/web/css/main-nav.css">
+    <link rel="stylesheet" href="/web/css/navbar.css">
     <link rel="stylesheet" href="/web/css/inquire.css">
     <script defer src="/web/js/index.js"></script>
+    <script defer src="/web/js/navbar.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Amita&display=swap" rel="stylesheet">
 </head>
 <body>
