--- a/web/templates/pages/index.html
+++ b/web/templates/pages/index.html
@@ -1,6 +1,6 @@
 {{ template "layout" }}
 {{ define "content" }}
-{{ template "main-nav" }}
+{{ template "navbar" . }}
 <div class="home-section" id="hero-section">
     <div id="mission-section">
         <div class="header-container" id="mission-header">
