--- a/web/templates/pages/yume.html
+++ b/web/templates/pages/yume.html
@@ -1,6 +1,6 @@
 {{ template "layout" }}
 {{ define "content" }}
-{{ template "alternate-nav" }}
+{{ template "navbar" . }}
 <div class="cat-details-container">
     <div class="cat-details-image-container">
         <img class="cat-details-image" src="/web/images/yume.jpeg" alt=" a cat photo">
