--- a/web/templates/pages/kittens.html
+++ b/web/templates/pages/kittens.html
@@ -1,6 +1,6 @@
 {{ template "layout" }}
 {{ define "content" }}
-{{ template "alternate-nav" }}
+{{ template "navbar" . }}
 <div id="kittens-main-container">
     <div class="kitten-card">
         <img class="kitten-card-image" src="/web/images/kuma.jpeg" alt="">
@@ -19,7 +19,7 @@
             <p>.</p>
             <p class="kitten-card-price">$4,000</p>
         </div>
-        <p class="kitten-card-description">'kuro' means black in Japanese.</p>
+        <p class="kitten-card-description">'Kuro' means black in Japanese.</p>
         <a class="kitten-link" href="/cat-details/kuro">Details</a>
     </div>
         <div class="kitten-card">
@@ -29,7 +29,7 @@
             <p>.</p>
             <p class="kitten-card-price">$4,000</p>
         </div>
-        <p class="kitten-card-description">'umi' means ocean in Japanese.</p>
+        <p class="kitten-card-description">'Umi' means ocean in Japanese.</p>
         <a class="kitten-link" href="/cat-details/umi">Details</a>
     </div>
     <div class="kitten-card">
@@ -39,7 +39,7 @@
             <p>.</p>
             <p class="kitten-card-price">$4,000</p>
         </div>
-        <p class="kitten-card-description">'yume' means dream in Japanese.</p>
+        <p class="kitten-card-description">'Yume' means dream in Japanese.</p>
         <a class="kitten-link" href="/cat-details/yume">Details</a>
     </div>
 </div>
