--- a/web/css/index.css
+++ b/web/css/index.css
@@ -100,7 +100,7 @@ a, a:hover, a:focus, a:active {
 
 #mission-section {
     margin-top: 100vh;
-    background-color: rgba(255, 255, 255, 0.15);
+    background-color: transparent;
     color: rgb(239, 239, 239);
     width: 100%;
     height: 90vh;
