--- a/web/templates/pages/index.html
+++ b/web/templates/pages/index.html
@@ -7,7 +7,7 @@
             <p class="section-header">The Mission</p>
         </div>
         <div class="content-container" id="mission-content">
-            <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
+            <img class="section-image-large" src="/web/images/don/main.jpeg" alt="">
             <p class="section-text" id="mission-text">
                 Primal Bloodline is dedicated to ethical breeding, prioritizing health, genetics, and early socialization to raise confident, loving companions.
             </p>
@@ -23,7 +23,7 @@
             View all of our currently available kittens.
         </p>
         <div class="image-button-container">
-            <img class="section-image-small" src="/web/images/mina.jpeg" alt="">
+            <img class="section-image-small" src="/web/images/kuro/pic1.jpeg" alt="">
             <a class="section-link" href="/kittens">View Kittens</a>
         </div>
     </div>
@@ -34,7 +34,7 @@
     </div>
     <div class="content-container">
         <div class="image-button-container">
-            <img class="section-image-small" src="/web/images/mina.jpeg" alt="">
+            <img class="section-image-small" src="/web/images/nabi/main.jpeg" alt="">
             <!-- <a class="section-link" href="/bloodline">View Bloodline</a> -->
         </div>
         <p class="section-text">
