--- a/web/templates/pages/kuro.html
+++ b/web/templates/pages/kuro.html
@@ -3,7 +3,7 @@
 {{ template "navbar" . }}
 <div class="cat-details-container">
     <div class="cat-details-image-container">
-        <img class="cat-details-image" src="/web/images/kuro.jpeg" alt=" a cat photo">
+        <img class="cat-details-image" src="/web/images/kuro/main.jpeg" alt=" a cat photo">
     </div>
     <div class="cat-details-text">
         <p class="cat-name">Kuro</p>
@@ -20,7 +20,7 @@
         <div class="cat-details-sub-text">
             <p class="cat-detail-label">Color:</p><p class="cat-detail">Grey/Orange</p>
         </div>
-        <a class="cat-details-link" href="/inquire/kuro">Inquire</a>
+        <a class="cat-details-link" href="/inquire/kuro">Purchase</a>
     </div>
 </div>
 {{ end }}
