--- a/web/css/kittens.css
+++ b/web/css/kittens.css
@@ -1,7 +1,9 @@
-/* main container */
+/* =========================
+   Base Styles (default)
+============================ */
 #kittens-main-container {
-    margin-top: 15vh;
-    height: 85vh;
+    margin-top: 8vh;
+    height: 92vh;
     width: 100vw;
     font-family: Amita;
     display: flex;
@@ -10,14 +12,13 @@
     overflow-y: scroll;
 }
 
-/* kitten card */
 .kitten-card {
     border-top-left-radius: 50%;
     border-top-right-radius: 50%;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
-    width: 25rem;
-    margin: 5rem;
+    width: 26rem;
+    margin: 4.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,6 +30,12 @@
     border-top-right-radius: 50%;
     width: 100%;
     cursor: pointer;
+    opacity: 0.85;
+}
+
+.kitten-card-image:hover {
+    transition: all 0.15s ease;
+    opacity: 1.0;
 }
 
 .kitten-card-sub-div {
@@ -39,19 +46,24 @@
 }
 
 .kitten-card-name {
-    font-size: x-large;
+    font-size: 22px;
 }
 
 .kitten-card-price {
+    font-size: 14px;
     opacity: 0.7;
 }
 
+.kitten-card-description {
+    font-size: 14px;
+}
+
 .kitten-link {
-    background-color: black;
+    background-color: rgb(25, 25, 25);
     color: rgb(255, 255, 255);
     text-align: center;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
     padding-top: 8px;
     padding-bottom: 8px;
     border-radius: 5px;
@@ -63,4 +75,62 @@
 .kitten-link:hover {
     background-color: rgba(0, 0, 0, 0.408);
     transition: all 0.15s ease;
+}
+
+/* =========================
+   Smallest phones (≥320px)
+============================ */
+@media (min-width: 320px) {
+}
+
+/* =========================
+   Small devices (≥480px)
+============================ */
+@media (min-width: 480px) {
+}
+
+/* =========================
+   Tablets (≥768px)
+============================ */
+@media (min-width: 768px) {
+}
+
+/* =========================
+   Small desktops (≥992px)
+============================ */
+@media (min-width: 992px) {
+}
+
+/* =========================
+   Large desktops (≥1200px)
+============================ */
+@media (min-width: 1200px) {
+    #kittens-main-container {
+        height: 88vh;
+        margin-top: 12vh;
+    }
+
+    .kitten-card {
+        width: 350px;
+        margin: 5rem;
+
+    }
+
+    .kitten-card-name {
+        font-size: x-large;
+    }
+
+    .kitten-card-description {
+        font-size: 18px;
+    }
+
+    .kitten-link {
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        border-radius: 5px;
+        margin-top: 1rem;
+        margin-bottom: 2rem;
+    }
 }
