--- a/web/css/navbar.css
+++ b/web/css/navbar.css
@@ -13,7 +13,7 @@
     font-family: Amita;
     transition: all 0.2s ease;
     z-index: 100;
-    background-color: black;
+    background-color: rgb(25, 25, 25);
     color: white;
 }
 
