--- a/web/templates/pages/kittens.html
+++ b/web/templates/pages/kittens.html
@@ -3,7 +3,7 @@
 {{ template "navbar" . }}
 <div id="kittens-main-container">
     <div class="kitten-card">
-        <img class="kitten-card-image" src="/web/images/kuma.jpeg" alt="">
+        <img class="kitten-card-image" src="/web/images/kuma/main.jpeg" alt="">
         <div class="kitten-card-sub-div">
             <h3 class="kitten-card-name">Kuma</h3>
             <p>.</p>
@@ -13,7 +13,7 @@
         <a class="kitten-link" href="/cat-details/kuma">Details</a>
     </div>
     <div class="kitten-card">
-        <img class="kitten-card-image" src="/web/images/kuro.jpeg" alt="">
+        <img class="kitten-card-image" src="/web/images/kuro/main.jpeg" alt="">
         <div class="kitten-card-sub-div">
             <h3 class="kitten-card-name">Kuro</h3>
             <p>.</p>
@@ -23,7 +23,7 @@
         <a class="kitten-link" href="/cat-details/kuro">Details</a>
     </div>
         <div class="kitten-card">
-        <img class="kitten-card-image" src="/web/images/umi.jpeg" alt="">
+        <img class="kitten-card-image" src="/web/images/umi/main.jpeg" alt="">
         <div class="kitten-card-sub-div">
             <h3 class="kitten-card-name">Umi</h3>
             <p>.</p>
@@ -33,7 +33,7 @@
         <a class="kitten-link" href="/cat-details/umi">Details</a>
     </div>
     <div class="kitten-card">
-        <img class="kitten-card-image" src="/web/images/yume.jpeg" alt="">
+        <img class="kitten-card-image" src="/web/images/yume/main.jpeg" alt="">
         <div class="kitten-card-sub-div">
             <h3 class="kitten-card-name">Yume</h3>
             <p>.</p>
