updated the images

--- a/web/templates/pages/index.html
+++ b/web/templates/pages/index.html
@@ -23,7 +23,7 @@
             View all of our currently available kittens.
         </p>
         <div class="image-button-container">
-            <img class="section-image-small" src="/web/images/kuro/pic1.jpeg" alt="">
+            <img class="section-image-small" src="/web/images/kuro/index.jpeg" alt="">
             <a class="section-link" href="/kittens">View Kittens</a>
         </div>
     </div>
