--- a/web/templates/pages/inquire.html
+++ b/web/templates/pages/inquire.html
@@ -3,7 +3,7 @@
 {{ template "navbar" . }}
 <div class="contact-main-container">
     <div class="contact-image-container">
-        <img class="contact-image" src="/web/images/{{ .ImageCatName }}.jpeg" alt="a cat picture">
+        <img class="contact-image" src="/web/images/{{ .ImageCatName }}/pic1.jpeg" alt="a cat picture">
     </div>
     <div class="form-container">
         <form id="payment-form" class="card-form" novalidate>
