--- a/web/templates/pages/yume.html
+++ b/web/templates/pages/yume.html
@@ -3,7 +3,7 @@
 {{ template "navbar" . }}
 <div class="cat-details-container">
     <div class="cat-details-image-container">
-        <img class="cat-details-image" src="/web/images/yume/main.jpeg" alt=" a cat photo">
+        <img class="cat-details-image" src="/web/images/yume/pic1.jpeg" alt=" a cat photo">
     </div>
     <div class="cat-details-text">
         <p class="cat-name">Yume</p>
