--- a/web/templates/pages/umi.html
+++ b/web/templates/pages/umi.html
@@ -3,7 +3,7 @@
 {{ template "navbar" . }}
 <div class="cat-details-container">
     <div class="cat-details-image-container">
-        <img class="cat-details-image" src="/web/images/umi/main.jpeg" alt=" a cat photo">
+        <img class="cat-details-image" src="/web/images/umi/pic1.jpeg" alt=" a cat photo">
     </div>
     <div class="cat-details-text">
         <p class="cat-name">Umi</p>
