updated the mission section

--- a/web/templates/pages/index.html
+++ b/web/templates/pages/index.html
@@ -7,7 +7,7 @@
             <p class="section-header">The Mission</p>
         </div>
         <div class="content-container" id="mission-content">
-            <img class="section-image-large" src="/web/images/don/main.jpeg" alt="">
+            <!-- <img class="section-image-large" src="/web/images/don/main.jpeg" alt=""> -->
             <p class="section-text" id="mission-text">
                 Primal Bloodline is dedicated to ethical breeding, prioritizing health, genetics, and early socialization to raise confident, loving companions.
             </p>
