fixed p tag bug

--- a/web/templates/partials/kitten-detail.html
+++ b/web/templates/partials/kitten-detail.html
@@ -8,7 +8,7 @@
         <p class="cat-name">{{ $first.CatTitleName }}</p>
         <p class="cat-price">{{ $first.Price }}</p>
         <div class="cat-details-sub-text">
-            <p class="cat-detail-label">DOB:</p><p class="cat-detail">{{ $first.DOB }}/p>
+            <p class="cat-detail-label">DOB:</p><p class="cat-detail">{{ $first.DOB }}</p>
         </div>
         <div class="cat-details-sub-text">
             <p class="cat-detail-label">Litter:</p><p class="cat-detail">{{ $first.Litter }}</p>
