--- a/web/css/inquire.css
+++ b/web/css/inquire.css
@@ -1,22 +1,27 @@
+/* =========================
+   Base Styles (default)
+============================ */
 .contact-main-container {
     font-family: Amita;
-    margin-top: 15vh;
+    margin-top: 32vh;
+    margin-bottom: 18vh;
     height: 85vh;
     width: 100vw;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 .contact-image-container > .contact-image {
-    height: 40rem;
-    width: 40rem;
+    height: 10rem;
+    width: 10rem;
     border-radius: 10px;
-    margin-right: 3rem;
 }
 
 .form-container {
-    width: 20rem;
+    width: 18rem;
+    margin-top: 2rem;
 }
 
 .form-header {
@@ -29,9 +34,9 @@
 }
 
 .text-input {
-    height: 2rem;
-    width: 19rem;
-    font-size: 1.1rem;
+    height: 1.75rem;
+    width: 17rem;
+    font-size: 1rem;
 }
 
 .text-message {
@@ -175,4 +180,56 @@ label {
     font-size: 0.85rem;
     color: #475569;
 }
-/*------------------*/
+
+/* =========================
+   Smallest phones (≥320px)
+============================ */
+@media (min-width: 320px) {
+}
+
+/* =========================
+   Small devices (≥480px)
+============================ */
+@media (min-width: 480px) {
+}
+
+/* =========================
+   Tablets (≥768px)
+============================ */
+@media (min-width: 768px) {
+}
+
+/* =========================
+   Small desktops (≥992px)
+============================ */
+@media (min-width: 992px) {
+}
+
+/* =========================
+   Large desktops (≥1200px)
+============================ */
+@media (min-width: 1200px) {
+    .contact-main-container {
+        margin-top: 15vh;
+        height: 85vh;
+        margin-bottom: 0vh;
+        flex-direction: row;
+    }
+
+    .contact-image-container > .contact-image {
+        height: 40rem;
+        width: 40rem;
+        margin-right: 3rem;
+    }
+
+    .form-container {
+        width: 20rem;
+        margin-top: 0rem;
+    }
+
+    .text-input {
+        height: 2rem;
+        width: 19rem;
+        font-size: 1.1rem;
+    }
+}
