--- a/web/templates/partials/navbar.html
+++ b/web/templates/partials/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar top" id="{{ .NavbarID }}"> <!-- main-navbar or alternate-navbar -->
     <div class="left-nav-container">
         <img class="left-icon" src="/web/images/don_don_art.jpg" alt="don-don">
-        <a id="left-nav-link" class="nav-link left-nav-link" href="/">
+        <a id="left-nav-link" class="left-nav-link" href="/">
             <svg class="site-title"
                 viewBox="0 0 1800.0001 300"
                 xmlns="http://www.w3.org/2000/svg"
