--- a/web/templates/pages/index.html
+++ b/web/templates/pages/index.html
@@ -9,7 +9,9 @@
         <div class="content-container" id="mission-content">
             <!-- <img class="section-image-large" src="/web/images/don/main.jpeg" alt=""> -->
             <p class="section-text" id="mission-text">
-                Primal Bloodline is dedicated to ethical breeding, prioritizing health, genetics, and early socialization to raise confident, loving companions.
+                Primal Bloodline is dedicated to ethical breeding, 
+                prioritizing health, genetics, and early socialization 
+                to raise confident, loving companions.
             </p>
         </div>
     </div>
